Added pictures and remark html document

--- a/intro_unix.html
+++ b/intro_unix.html
@@ -1,9 +1,25 @@
-# UNIX Slides #
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Introduction to Unix</title>
+    <meta charset="utf-8">
+    <style>
+      @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
+      @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
+      @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
 
-### What is this repository for? ###
+      body { font-family: 'Droid Serif'; }
+      h1, h2, h3 {
+        font-family: 'Yanone Kaffeesatz';
+        font-weight: normal;
+      }
+      .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+    </style>
+  </head>
+  <body>
+    <textarea id="source">
 
-* Set of slides about UNIX operating systems
-* Version: 0.1
+class: center, middle
 
 # Introduction to UNIX
 
@@ -574,4 +590,14 @@ no|yes) response=1;;
 esac
 ```
 
+
+
+    </textarea>
+    <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
+    </script>
+    <script>
+      var slideshow = remark.create();
+    </script>
+  </body>
+</html>
 
