Checks for case-consistent use of UNIX

--- a/intro_unix.html
+++ b/intro_unix.html
@@ -74,7 +74,7 @@ class: center, middle
 
 	* 4th Edition (November 1973): Almost totally written in the C language
 
-	* 5th Edition (June 1974): Unix was installed on more than 50 systems
+	* 5th Edition (June 1974): UNIX was installed on more than 50 systems
 
 	* 6th Edition (May 1975): First edition widely used outside AT&T
 
@@ -90,7 +90,7 @@ class: center, middle
 # Two important variants (BSD and System V)
 * January 1979 saw the release of the 7th edition of UNIX, which included a) improved reliability and file systems and b) a number of new tools: awk, make, sed, tar, uucp, the Bourne shell, and a Fortran compiler
 
-* From this point UNIX derived into two important variants: BSD Unix and System V
+* From this point UNIX derived into two important variants: BSD UNIX and System V
 
 * To understand that divergence we need to go back to 1975/1976, when Thomson (the guy who wrote the first version of UNIX) spent a year as visiting professor at the University of California Berkeley
 	* worked with several graduate students adding new features to UNIX such as the C shell, the vi editor, and improved file system, sendmail, a pascal compiler, and virtual memory management system
@@ -200,7 +200,7 @@ man man
 * `apropos (keyword)`: searches man pages for a given keyword
 
 ---
-# Unix File System
+# UNIX File System
 * Hierarchical arrangement of files and irectories
 
 * Everything stars in the root directory, denoted by `/`
@@ -219,7 +219,7 @@ man man
 	* execute
 
 ---
-# Unix Files
+# UNIX Files
 * File permissions are indicated with 9 bits
 
 * The first 3 indicate the permissions for the owner of the file for reading, writing and executing
@@ -235,7 +235,7 @@ man man
 * `chown`: changes the owner of a file
 
 ---
-# Unix Files
+# UNIX Files
 
 ![Unix Architecture](./file-info.png)
 
@@ -395,7 +395,7 @@ grep XX file || echo "XX not found"
 ---
 # Commands and wildcards
 
-* Unix commands can be used with wildcards
+* UNIX commands can be used with wildcards
 	* `?` one character
 	* `*` 0 or more characters
 	* `[ab]` any character included in the range
@@ -568,7 +568,6 @@ no|yes) response=1;;
 *) echo "unknown option"; exit1;;
 esac
 ```
-
     </textarea>
     <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
     </script>
